mobile fixes... too much fixes

--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,184 @@ input:focus {
     100% { transform: rotate(360deg); }
 }
 
-@media screen and (orientation: portrait) {
+@media only screen and (max-width: 550px) {
+    .p20 {
+        font-size: 25px;
+    }
+
+    .p26 {
+        font-size: 32.5px;
+    }
+
+    .metamask {
+        width: 200px;
+        height: 30px;
+        line-height: 30px;
+    }
+
+    .staking {
+        width: 80%;
+        height: 500px;
+    }
+
+    .top {
+        margin-top: 30px;
+    }
+
+    .button {
+        width: 140px;
+        height: 60px;
+        line-height: 60px;
+        margin: 25px;
+    }
+
+    .form {
+        margin-top: 30px;
+    }
+
+    input {
+        width: 75%;
+        height: 20px;
+        line-height: 20px;
+        font-size: 20px;
+    }
+
+    #approve {
+        width: 75%;
+    }
+
+    .loader {
+        margin-top: 0px;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .p20 {
+        font-size: 22px;
+    }
+
+    .p26 {
+        font-size: 28.6px;
+    }
+
+    .metamask {
+        width: 180px;
+    }
+
+    .staking {
+        height: 450px;
+    }
+
+    .button {
+        width: 120px;
+        height: 50px;
+        line-height: 50px;
+    }
+
+    .loader {
+        border: 4px solid #f3f3f3;
+        border-top: 4px solid blue;
+        border-bottom: 4px solid blue;
+        border-radius: 50%;
+        width: 20px;
+        height: 20px;
+    }
+}
+
+@media only screen and (max-width: 431px) {
+    .p20 {
+        font-size: 20px;
+    }
+
+    .p26 {
+        font-size: 26px;
+    }
+
+    .staking {
+        height: 410px;
+    }
+
+    .button {
+        height: 40px;
+        line-height: 40px;
+        margin: 20px;
+    }
+}
+
+@media only screen and (max-width: 407px) {
+    .p20 {
+        font-size: 18px;
+    }
+
+    .p26 {
+        font-size: 23.4px;
+    }
+
+    .staking {
+        height: 395px;
+    }
+
+    .button {
+        width: 100px;
+        height: 40px;
+        line-height: 40px;
+        margin: 20px;
+    }
+}
+
+@media only screen and (max-width: 360px) {
+    .p20 {
+        font-size: 16px;
+    }
+
+    .p26 {
+        font-size: 20.8px;
+    }
+
+    .staking {
+        height: 350px;
+    }
+
+    .button {
+        width: 80px;
+        height: 40px;
+        line-height: 40px;
+        margin: 10px;
+    }
+}
+
+@media only screen and (max-width: 310px) {
+    .p20 {
+        font-size: 14px;
+    }
+
+    .p26 {
+        font-size: 18.2px;
+    }
+
+    .staking {
+        height: 330px;
+    }
+
+    .button {
+        width: 70px;
+        height: 35px;
+        line-height: 35px;
+        margin: 10px;
+    }
+
+    input {
+        height: 16px;
+        line-height: 16px;
+        font-size: 15px;
+    }
+}
+
+@media screen and (orientation: portrait) and (min-width: 530px) {
+    body {
+        background-color: red;
+    }
+
     .p20 {
         font-size: 40px;
     }
